[package]
name = "neural_resume"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tower-http = { version = "0.6.11", features = ["cors", "compression-full"] }

chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "json"] }
futures-util = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
nix = { version = "0.31.3", features = ["process", "signal"] }

[target.mipsel-unknown-linux-musl]
# This tells cross to build the standard library and required dependencies
build-std = ["std", "panic_abort", "core", "alloc"]
